; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_mss2.c_arith2_get_scaled_value.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_mss2.c_arith2_get_scaled_value.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32)* @arith2_get_scaled_value to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @arith2_get_scaled_value(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %9 = load i32, i32* %6, align 4
  %10 = shl i32 %9, 1
  %11 = load i32, i32* %7, align 4
  %12 = sub nsw i32 %10, %11
  store i32 %12, i32* %8, align 4
  %13 = load i32, i32* %5, align 4
  %14 = load i32, i32* %8, align 4
  %15 = icmp sgt i32 %13, %14
  br i1 %15, label %16, label %23

16:                                               ; preds = %3
  %17 = load i32, i32* %8, align 4
  %18 = load i32, i32* %5, align 4
  %19 = load i32, i32* %8, align 4
  %20 = sub nsw i32 %18, %19
  %21 = ashr i32 %20, 1
  %22 = add nsw i32 %17, %21
  store i32 %22, i32* %4, align 4
  br label %25

23:                                               ; preds = %3
  %24 = load i32, i32* %5, align 4
  store i32 %24, i32* %4, align 4
  br label %25

25:                                               ; preds = %23, %16
  %26 = load i32, i32* %4, align 4
  ret i32 %26
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
